# RustTool-for-API-Routes

./: .gitignore  AI_COMMANDS.md  Cargo.toml  INFO.md  README.md  VERSION.md  repos.json
.arm/: mapping.json  repo.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  main.rs  template.rs  tree.rs
src/commands/: mod.rs  registry.rs  show.rs  update.rs
