[package]
name = "api-routes-manager"
version = "0.1.0"
edition = "2024"
authors = ["API Routes Manager"]
description = "A CLI tool for managing API routes and error codes using Git branches"

[[bin]]
name = "arm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
git2 = "0.19"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.1"
rand = "0.8"
dialoguer = "0.11"
walkdir = "2.5"
rayon = "1.10"
indexmap = "2.2"
regex = "1.10"
dirs = "5.0"
toml = "0.8"
whoami = "1.5"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"
